--- a/websockets_ex1/src/main/resources/static/index.html
+++ b/websockets_ex1/src/main/resources/static/index.html
@@ -36,7 +36,7 @@
       }
 
       #user-list-container {
-        flex: 1; /* A lista ocupa menos espaço */
+        flex: 1; 
         border: 1px solid #ddd;
         padding: 1rem;
         height: 320px;
