implementação do listenner no chat, resta a resolução da atualização da lista, tal como o chat

--- a/websockets_ex1/src/main/resources/static/index.html
+++ b/websockets_ex1/src/main/resources/static/index.html
@@ -140,6 +140,12 @@
                 const users = JSON.parse(frame.body);
                 updateOnlineUsers(users);
             });
+          
+          // O @SubscribeMapping no servidor responderá a esta inscrição
+            stomp.subscribe("/app/online", (frame) => {
+                const users = JSON.parse(frame.body);
+                updateOnlineUsers(users);
+            });
             
 
             stomp.send("/app/chat.join", {}, JSON.stringify({ origem: user }));
